--- a/content/posts/2.medicare-advantage-vs-original-medicare.md
+++ b/content/posts/2.medicare-advantage-vs-original-medicare.md
@@ -35,7 +35,7 @@ services in 2024.
 Medicare Advantage plans typically have little or no premiums but when serious medical
 issues arise, Original Medicare with Medigap typically offer greater provider choices,
 quicker diagnostics, and significantly lower overall out of pocket costs, which could be
-better. Also, if on an Advantage plan you want to switch back to Original Medicare, you
+better. Also, if you are on an Advantage plan and you want to switch back to Original Medicare you can, you
 may not be able to secure a Medigap policy if you have health issues that do not pass
 underwriting. For this reason, I usually recommend Original Medicare with Medigap
 when you first enroll or as soon as you qualify for Medigap.
