make CTA less "salesy" + add featured image to new blog

--- a/content/posts/1.the-difference-between-medicare-advantage-and-traditional-medicare.md
+++ b/content/posts/1.the-difference-between-medicare-advantage-and-traditional-medicare.md
@@ -20,9 +20,9 @@ seo:
 form:
     - background_image: ''
       style: 'light'
-      subtitle: 'Contact us today to get a free quote on your insurance plan'
+      subtitle: 'Contact us today to get expert advice concerning your insurance needs'
       template: 'contact-us-popup'
-      title: 'GET A FREE QUOTE'
+      title: 'SCHEDULE A FREE CONSULTATION'
 ---
 
 **My experience has shown that staying on Original Medicare and not Medicare Advantage is almost always the better choice for our clients**.
