--- a/content/posts/2.medicare-advantage-vs-original-medicare.md
+++ b/content/posts/2.medicare-advantage-vs-original-medicare.md
@@ -8,12 +8,13 @@ tags:
     - medicare advantage
 author: staff/mike.md
 date: 2024-10-09
+featured_image: /v1679011760/insurancesmart/pzoyxavt8psuivukgym4
 form:
     - background_image: ''
       style: 'light'
-      subtitle: 'Contact us today to get a free quote on your insurance plan'
+      subtitle: 'Contact us today to get expert advice concerning your insurance needs'
       template: 'contact-us-popup'
-      title: 'GET A FREE QUOTE'
+      title: 'SCHEDULE A FREE CONSULTATION'
 ---
 
 Most seniors do not realize Medicare Advantage (or Plan C) is an alternative to Original
