add new blog post

--- a/content/posts/2.medicare-advantage-vs-original-medicare.md
+++ b/content/posts/2.medicare-advantage-vs-original-medicare.md
@@ -46,4 +46,4 @@ increase over time, but because we are Independent and represent several major
 carriers, we shop through the years to get clients the best possible rate for the plan type
 they desire.
 
-Mike Sosso, helping seniors with Medicare since 2005. For a no cost consultation call (210) 972-9035.
+Mike Sosso, helping seniors with Medicare since 2005. For a no cost consultation call [(210) 972-9035](tel:2109729035).
