--- a/content/posts/3.five-differences-between-original-medicare-and-medicare-advantage.md
+++ b/content/posts/3.five-differences-between-original-medicare-and-medicare-advantage.md
@@ -1,5 +1,49 @@
 ---
 title: 5 Differences Between Original Medicare and Medicare Advantage
-draft: true
-date: 2024-10-18
+slug: 2025-02-22-5-differences-between-original-medicare-and-medicare-advantage
+draft: false
+date: 2025-02-22
+author: staff/mike.md
+featured_image: /v1679011760/insurancesmart/klpknnz04amd952oseju
+categories:
+    - medicare
+tags:
+    - medicare
+    - medicare advantage
+form:
+    - background_image: ''
+      style: 'light'
+      subtitle: 'Contact us today to get expert advice concerning your insurance needs'
+      template: 'contact-us-popup'
+      title: 'SCHEDULE A FREE CONSULTATION'
 ---
+
+Knowing when to pick between original Medicare and Medicare Advantage can be confusing. This list has been put together so that it can be an easy point of reference during your decision making process.
+
+### 1. Premiums
+
+Original Medicare with a supplement, or Medigap has higher premiums but very low out of pocket costs for services (only $240 per year on Plan G). Medicare Advantage has lower premiums but higher out of pocket costs for services with annual maximums ranging from $2,500–$12,000.
+
+### 2. Payments
+
+Original Medicare pays providers directly for services while Medicare Advantage transfers all payment responsibility to private insurance.
+
+### 3. Choice of Doctor
+
+Original Medicare allows you to choose any doctor or provider that takes Medicare. You don’t need approval for a second opinion or to see a specialist. Alternatively, Medicare Advantage limits and directs provider choices.
+
+### 4. Preauthorization for Services
+
+Original Medicare does not require preauthorization for services while Medicare Advantage does. Preauthorization means your doctor must get approval for many services like expensive diagnostics, testing, or surgery. This takes time and, if services are denied, you can appeal but approval is not guaranteed.
+
+### 5. Long Term Stability
+
+Original Medicare paired with Medigap is a lifelong plan and won’t change unless you change your gap coverage. Medicare Advantage is written and changes annually.
+
+## Closing Thoughts
+
+Remember if you develop serious health issues while on Advantage and want back on Original Medicare, you can switch but may not qualify for a supplement. For this reason, I typically recommend Original Medicare with a supplement when you qualify. 
+
+Because Medicare Advantage is an alternative to Original Medicare, you can switch to Original Medicare two times a year: October 15th–December 7th and January 1st–March 31st (right now.) If you’re on Medicare Advantage and want to see if Original Medicare is best for you, we can review your situation, see if you qualify for Medigap, and make recommendations that meet your needs and budget. Also, if you’re on Original Medicare and supplemental premiums have increased, let us shop to find you equal or better coverage at a lower cost.
+
+Mike Sosso, a Helotes resident since 1996, has been helping seniors understand and enroll in Medicare since 2005.
