update medicare advantage vs original medicare article

--- a/content/posts/2.medicare-advantage-vs-original-medicare.md
+++ b/content/posts/2.medicare-advantage-vs-original-medicare.md
@@ -17,33 +17,14 @@ form:
       title: 'SCHEDULE A FREE CONSULTATION'
 ---
 
-Most seniors do not realize Medicare Advantage (or Plan C) is an alternative to Original
-Medicare and transfers responsibility for your care to private insurance. Advantage
-plans receive payment when you enroll whether you see them for services or not. To
-control costs, all plans require preauthorization for services like expensive diagnostics,
-treatment, or surgery, and can sometimes delay or deny coverage. You can appeal but
-this takes time and does not guarantee approval. In addition, annual maximum out of
-pocket exposure on Advantage plans range from $2500 to $12,000 and often limit
-service to certain providers.
+Most seniors do not realize Medicare Advantage (or Plan C) is an alternative to Original Medicare and was added as a cost saving measure by Congress in the Balanced Budget Act of 1997. When you sign up for Medicare Advantage, Medicare transfers the financial responsibility for all your medical care to private insurance. The Medicare Advantage plan receives a payment from Medicare monthly while you are enrolled in the Advantage plan whether you see them for services or not.
 
-When on Original Medicare, providers bill Medicare directly for services with little to no
-preauthorization required and allow you to see any provider in the USA accepting
-Medicare. We recommend adding supplemental coverage (Medigap or Medicare
-Supplement policy) to provide the best protection. This requires a premium but Medigap
-Plan G for example reduces maximum out of pocket cost to $240 for all approved
-services in 2024.
+Most plans offer certain perks like dental and vision to encourage enrollment and when you are not needing major care, the plans work great. But when major medical expenses arise, some Medicare Advantage plans may scrutinize expenses. To control costs all Medicare Advantage plans have preauthorization requirements for certain services like expensive diagnostics, treatment, or surgery, which sometimes causes a delay or even denial of the recommended service. If this happens you can file an appeal, but this takes time and does not guarantee services will be approved. In addition, Advantage plans have annual cost sharing requirements in the form of annual coinsurance that range from $2500 to $11,000 per year. Be sure to look at this closely in your plan so you are not surprised by a large bill after a major service or treatment. Most Advantage plans can also limit providers to certain networks (PPO) Preferred Provider Organizations or (HMO) Health Maintenance Organizations with exceptions made in emergencies.
 
-Medicare Advantage plans typically have little or no premiums but when serious medical
-issues arise, Original Medicare with Medigap typically offer greater provider choices,
-quicker diagnostics, and significantly lower overall out of pocket costs, which could be
-better. Also, if you are on an Advantage plan and you want to switch back to Original Medicare you can, you
-may not be able to secure a Medigap policy if you have health issues that do not pass
-underwriting. For this reason, I usually recommend Original Medicare with Medigap
-when you first enroll or as soon as you qualify for Medigap.
+Alternatively, when you remain on Original Medicare, Medicare is your primary insurance and pays providers directly for services when rendered. There is little to no preauthorization required for standard Medicare approved service so providers are able to treat you without delay. In addition, you can choose your doctor, hospital, and specialist from any provider in the USA that accepts Medicare. This is extremely helpful if you travel to see children and grandchildren to other parts of the country. When on Original Medicare we recommend adding supplemental coverage (Medicare Supplement policy also called Medigap) to provide you with the best protection. The supplemental coverage is designed to fill in the gap and pick up the costs for services Medicare approves but does not pay. Supplemental coverage does have a modest premium but Medigap Plan G for example reduces your maximum out of pocket expenses for all Medicare approved services no matter what happens to only $257 in 2025.
 
-Medigap premiums for a 65-year-old average between $95 - $200. Premiums can
-increase over time, but because we are Independent and represent several major
-carriers, we shop through the years to get clients the best possible rate for the plan type
-they desire.
+Medicare Advantage plans typically have little or no premiums but when serious medical issues arise, Original Medicare with Medigap typically offer greater provider choices, quicker diagnostics, and significantly lower overall out of pocket costs, which could be better. Also, if you are on an Advantage plan and you want to switch back to Original Medicare you can, but you may need to go through medical underwriting. For this reason, we typically recommend Original Medicare with Medigap for the best medical coverage when you first enroll or as soon as you qualify for Medigap. Medigap premiums for a 65-year-old average between $70 - $200 depending upon your plan choice or zip code. Premiums can increase over time, but because we are Independent and represent several major carriers, we shop through the years to help clients manage cost and get them the best possible rate for the plan type they desire.
+
+Because Medicare Advantage is an alternative to Original Medicare, you can switch to Original Medicare two times a year: October 15th–December 7th and January 1st–March 31st (right now.) If you’re on Medicare Advantage and want to see if Original Medicare is best for you, we can review your situation, see if you qualify for Medigap, and make recommendations that meet your needs and budget. Also, if you’re on Original Medicare and your supplemental premiums have increased, we can shop to see if we can find you equal or better coverage at a lower cost. Let us show you first-hand how we have earned our exceptional customer service rating on Google by requesting your no cost or obligation consultation today!
 
 Mike Sosso, helping seniors with Medicare since 2005. For a no cost consultation call [(210) 972-9035](tel:2109729035).
