--- a/content/posts/4.want-to-switch-back-to-original-medicare.md
+++ b/content/posts/4.want-to-switch-back-to-original-medicare.md
@@ -1,5 +1,5 @@
 ---
-title: On Medicare Advantage and wondering if there is something better? Why not switch Back to Original Medicare – Your Window of Opportunity is right now January 1 through March 31, 2025!
+title: On Medicare Advantage and wondering if there is something better? 
 slug: want-to-switch-back-to-original-medicare
 featured_image: /v1679011760/insurancesmart/trfprit7jouhhzbvbej0
 date: 2025-03-07
